# screen-record

./: .gitignore  README.md  requirements.txt
docs/plans/: 2026-03-03-cli-silent-recording-design.md
python/: app.py  cli.py
python/recorder/: audio.py  cmd_builder.py  settings_manager.py  webcam.py
python/static/js/: app.js
python/templates/: index.html
python/web/: api.py
recorder/: cmd_builder.py  engine.py
rust/: Cargo.toml  README.md  build.rs
rust/assets/: app.css  app.js  index.html
rust/src/: main.rs
static/js/: app.js
web/: routes.py
