[package]
name = "screen-recorder"
version = "0.1.0"
edition = "2021"
description = "Screen Recorder with WebUI and CLI support"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
regex = "1"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
